Landing page footer added

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,28 +1,26 @@
-<!-- HOME -->
-   
-<footer class ="footer-beige col-xs-12">
-  <div class="row-clear container-960">
-    <div class="col-sm-3 col-xs-12">
+
+  <div class="row-fluid">
+    <div class="col-lg-3 col-sm-3 col-xs-12">
       <h4>SITE MAP
       </h4>
-      <a href="" class="nobluelink">FAQ</a><br>
-      <a href="" class="nobluelink">Terms and Conditions</a>
+      <a href="">FAQ</a><br>
+      <a href="">Terms and Conditions</a>
       <br>
       <br>
       <h4>OUR SERVICES</h4>
-      <a href="" class="nobluelink">
+      <a href="">
         For Customers
       </a><br>
-      <a href="" class="nobluelink">For Suppliers</a><br>
+      <a href="">For Suppliers</a><br>
     </div>
-    <div class="col-sm-3 col-xs-12">
+    <div class="col-lg-3 col-sm-3 col-xs-12">
       <h4>ABOUT</h4>
-      <a href="" class="nobluelink">EventPlanner.PH</a><br>
-      <a href="" class="nobluelink">Meet the Team</a><br>
+      <a href="">EventPlanner.PH</a><br>
+      <a href="">Meet the Team</a><br>
       <br>
       <h4>PARTNERS</h4>
-      <a href="" class="nobluelink">Our partners</a><br>
-      <a href="" class="nobluelink">Become a partner</a>
+      <a href="">Our partners</a><br>
+      <a href="">Become a partner</a>
     </div>
     <div class="col-sm-6 col-xs-12" style="background-color: $salmon;">
       <h4>FEEDBACK
