fixed routes conflict

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,15 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+
+<header>
+    <% if user_signed_in? %>
+    <%= render partial: "signed" %>
+    <% else %>
+    <%= render :partial => "unsigned" %>
+    <% end %>
+</header>
+
 <body>
 
 <%= yield %>
