--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 
 
 <header>
-    <% if user_signed_in? %>
+    <% if user_signed_in? ||  supplier_signed_in? %>
     <%= render partial: "layouts/signed" %>
     <% else %>
     <%= render :partial => "layouts/unsigned" %>
