--- a/app/views/layouts/_unsigned.html.erb
+++ b/app/views/layouts/_unsigned.html.erb
@@ -1,14 +1,65 @@
-<ul id="unsigned" class="nav navbar-nav pull-right">              
+<div id="navbar-wrapper">
+  <div class="container" id ="nav-container">        
+    <div id="nav" class="navbar navbar-inverse navbar-fixed-top no-padding">
+        <div class="col-sm-12 padding-3em">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="/">
+                <img src="/assets/landing/logo2-nav.png" class="nav-logo" width= "200px;">
+              </a>
+            </div> <!--nav-header-->
 
+            <div class="row">
+            <div class="navbar-collapse collapse">
+              <nav id = "nav-main" role = "navigation">
+                  <div class="no-padding">
+                      <!--main-nav-->
+                      <div class="main-nav">
 
-<li>
- <%= link_to '<i class="fa fa-sign-in nav-icon fa-2x" id="log-in"></i>  <span class="nav-label" id="log-in">Log In</span>'.html_safe, new_user_session_path, id: "log-in"  %>
- 
-</li>
+                      <ul id="unsigned" class="nav navbar-nav">              
+            						<li class="dropdown">
+              						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Log In <span class="caret"></span></a>
+              							<ul class="dropdown-menu" role="menu">
+              							Are you a
+              								<li>
+    		                         <%= link_to '<i class="fa fa-sign-in nav-icon fa-2x" id="log-in"></i>  <span class="nav-label" id="log-in">Event Planner?</span>'.html_safe, new_user_session_path, id: "log-in"  %>       
+    		                       </li>
 
-<li>
- <%= link_to '<i class="fa fa-plus-square nav-icon fa-2x" id="create-new"></i>  <span class="nav-label" id="create-new">Sign Up</span>'.html_safe, new_user_registration_path, id: "create-new"  %>
- 
-</li> 
+    		                       	<li>
+    		                         <%= link_to '<i class="fa fa-sign-in nav-icon fa-2x" id="log-in"></i>  <span class="nav-label" id="log-in">Venue Provider?</span>'.html_safe, new_supplier_session_path, id: "log-in"  %>    
+    		                       	</li>
 
-</ul>
+              							</ul><!--dropdown menu-->
+              						</li>
+
+                        <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sign Up <span class="caret"></span></a>
+                          <ul class="dropdown-menu" role="menu">
+                          Are you a
+                            <li>
+                               <%= link_to '<i class="fa fa-plus-square nav-icon fa-2x" id="create-new"></i>  <span class="nav-label" id="create-new">Event Planner?</span>'.html_safe, new_user_registration_path, id: "create-new"  %>
+                               
+                             </li> 
+
+                              <li>
+                               <%= link_to '<i class="fa fa-sign-in nav-icon fa-2x" id="log-in"></i>  <span class="nav-label" id="log-in">Venue Provider?</span>'.html_safe, new_supplier_registration_path, id: "log-in"  %>    
+                              </li>
+
+                          </ul><!--dropdown menu-->
+                        </li>    
+
+                      </ul> <!--unsigned-->  
+                    </div>    <!--main-nav--> 
+                    </div> <!--no padding-->
+              </nav>  
+            </div> 
+          </div><!--row-->
+        </div>
+     </div><!--nav id-->
+    </div><!--nav container-->
+</div><!--navbar wrapper-->
+
