--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,7 +29,21 @@ $gray: rgba(87, 94, 92, 1); /* #575e5c  */
 $cream: rgba(253, 242, 211, 1); /* #fdf2d3  */
 $white: rgba(255, 255, 245, 1); /* #fffff5 */
 
-a:focus, a:hover {
-	outline: none;
+.footer a {
+	color: #FFF;
+}
+
+.container {
+	
+}
+
+
+
+.footer {
+	background-color: $salmon;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	padding: 20px;
 
 }
