--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
-
+<div class="footer">
   <div class="row-fluid">
 
     <div class="col-sm-3 col-xs-12">
@@ -27,22 +27,13 @@
     <div class="col-sm-6 col-xs-12">
       <h4>FEEDBACK
         <small>We would love to hear from you!</small>
-        &emsp;&emsp;<button type="submit" class="btn btn-default">Submit</button></h4>
+        &emsp;&emsp;<button type="submit" class="btn btn-default pull-right">Submit</button></h4>
+        <br>
       <form role="form">
-        <input type="Text" class="form-control not-simple-form" placeholder="Name (Required)">
+        <input type="Text" class="form-control not-simple-form" placeholder="Name (Required)"> <br>
         <textarea class="form-control" style="resize: none;" placeholder="Your message"></textarea>
       </form>
     </div>
   </footer>
 <a id="top-link"><span class="glyphicon glyphicon-circle-arrow-up"></span></a>
-
-<script type="text/javascript">
-
-$(document).ready(function() {
-	 $('#learn-more').click(function() {
-	 	$(window).scrollTo("section#about", 800, {offset:-68});
-	 });
-});
-
-$('[data-autoheight="true"]').css('padding-top', '2em');
-</script>
+</div>
