--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,15 +29,40 @@ $gray: rgba(87, 94, 92, 1); /* #575e5c  */
 $cream: rgba(253, 242, 211, 1); /* #fdf2d3  */
 $white: rgba(255, 255, 245, 1); /* #fffff5 */
 
+body {
+	background-color: $white;
+}
+
 .footer a {
 	color: #FFF;
 }
 
 .container {
-	width: 960px;
+	max-width: 960px;
 }
 
+.carousel {
+	width: 100%;
+	height: 400px;
+	background-color: $lblue;
+	margin-bottom: 20px;
+}
 
+.landingbox {
+	width: 100%;
+	border: 1px #898989 solid;
+	height: 300px;
+}
+
+.landingbody {
+	height: 100%;
+	min-height: 1000px;
+	position: relative;
+}
+
+.clear {
+	clear: both;
+}
 
 .footer {
 	background-color: $salmon;
