--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,39 +1,63 @@
-<div class="footer">
-  <div class="row-fluid">
 
-    <div class="col-sm-3 col-xs-12">
 
-      <h4>SITE MAP
-      </h4>
-      <a href="">FAQ</a><br>
-      <a href="">Terms and Conditions</a>
-      <br>
-      <br>
-      <h4>OUR SERVICES</h4>
-      <a href="">
-        For Customers
-      </a><br>
-      <a href="">For Suppliers</a><br>
+<div class="landingbody">
+<div class="carousel">
+  <!-- CAROUSEL CONTENT HERE -->
+</div>
+
+
+  <div class="row-fluid container clear">
+    <div class="col-sm-4 col-xs-12">
+        <div class="landingbox"></div>
     </div>
-    <div class="col-lg-3 col-sm-3 col-xs-12">
-      <h4>ABOUT</h4>
-      <a href="">EventPlanner.PH</a><br>
-      <a href="">Meet the Team</a><br>
-      <br>
-      <h4>PARTNERS</h4>
-      <a href="">Our partners</a><br>
-      <a href="">Become a partner</a>
+    <div class="col-sm-4 col-xs-12">
+        <div class="landingbox"></div>
     </div>
-    <div class="col-sm-6 col-xs-12">
-      <h4>FEEDBACK
-        <small>We would love to hear from you!</small>
-        &emsp;&emsp;<button type="submit" class="btn btn-default pull-right">Submit</button></h4>
+    <div class="col-sm-4 col-xs-12">
+        <div class="landingbox"></div>
+    </div>
+  </div>
+
+
+
+  <div class="footer">
+    <div class="row-fluid container">
+
+      <div class="col-sm-3 col-xs-12">
+
+        <h4>SITE MAP
+        </h4>
+        <a href="">FAQ</a><br>
+        <a href="">Terms and Conditions</a>
         <br>
-      <form role="form">
-        <input type="Text" class="form-control not-simple-form" placeholder="Name (Required)"> <br>
-        <textarea class="form-control" style="resize: none;" placeholder="Your message"></textarea>
-      </form>
-    </div>
-  </footer>
-<a id="top-link"><span class="glyphicon glyphicon-circle-arrow-up"></span></a>
+        <br>
+        <h4>OUR SERVICES</h4>
+        <a href="">
+          For Customers
+        </a><br>
+        <a href="">For Suppliers</a><br>
+      </div>
+      <div class="col-lg-3 col-sm-3 col-xs-12">
+        <h4>ABOUT</h4>
+        <a href="">EventPlanner.PH</a><br>
+        <a href="">Meet the Team</a><br>
+        <br>
+        <h4>PARTNERS</h4>
+        <a href="">Our partners</a><br>
+        <a href="">Become a partner</a>
+      </div>
+      <div class="col-sm-6 col-xs-12">
+        <h4>FEEDBACK
+          <small>We would love to hear from you!</small>
+          &emsp;&emsp;<button type="submit" class="btn btn-default pull-right">Submit</button></h4>
+          <br>
+        <form role="form">
+          <input type="Text" class="form-control not-simple-form" placeholder="Name (Required)"> <br>
+          <textarea class="form-control" style="resize: none;" placeholder="Your message"></textarea>
+        </form>
+      </div>
+    </footer>
+  <a id="top-link"><span class="glyphicon glyphicon-circle-arrow-up"></span></a>
+  </div>
+
 </div>
