--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,18 +5,96 @@
   <!-- CAROUSEL CONTENT HERE -->
 </div>
 
-
-  <div class="row-fluid container clear">
+<div class="landingcontent">
+  <div class="row-fluid container">
     <div class="col-sm-4 col-xs-12">
-        <div class="landingbox"></div>
+        <div class="landingbox">Tori</div>
     </div>
     <div class="col-sm-4 col-xs-12">
-        <div class="landingbox"></div>
+        <div class="landingbox">Tori</div>
     </div>
     <div class="col-sm-4 col-xs-12">
-        <div class="landingbox"></div>
+        <div class="landingbox">Tori</div>
     </div>
   </div>
+
+  <div class="extra container">
+  <p>
+      <h1>This is an h1 font. <small> voluptatem accusantium doloremque</small> </h1>
+
+      <h2>This is h2. laudantium, totam rem aperiam.</h2> 
+      
+      <h3>beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit </h3>
+      
+      <h4>aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione </h4>
+      
+      <h5>voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit </h5>
+
+      <b>amet, consectetur, adipisci velit,</b> 
+
+      <i>sed quia non numquam eius modi tempora</i>
+
+       incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+  </p>
+
+  <br><h2> Buttons</h2>
+
+    Main Buttons <br>
+    <button class="btn btn-info">Btn-Info</button>
+      <button class="btn btn-danger">Btn-Danger</button>
+    <button class="btn btn-default">Btn-Default</button> 
+    <br>
+    Sub Buttons <br>
+    <button class="btn btn-sm btn-success">Btn-Success</button>
+    <button class="btn btn-sm btn-warning">Btn-Warning</button>
+    
+    <br><br><h2> Panels</h2>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Panel Default Title</h3>
+      </div>
+      <div class="panel-body">
+        Panel body
+      </div>
+   <div class="col-sm-4 col-xs-12">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Panel Default Title</h3>
+      </div>
+      <div class="panel-body">
+        Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+        <br>
+        <button class="btn btn-default pull-right">Read More</button>
+      </div>
+    </div>
+  </div> <div class="col-sm-4 col-xs-12">
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <h3 class="panel-title">Panel INFO</h3>
+      </div>
+      <div class="panel-body">
+        Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+        <br>
+        <button class="btn btn-info pull-right">Read More</button>
+      </div>
+    </div>
+  </div> <div class="col-sm-4 col-xs-12">
+    <div class="panel panel-danger">
+      <div class="panel-heading">
+        <h3 class="panel-title">Panel DANGER</h3>
+      </div>
+      <div class="panel-body">
+        Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+        <br>
+        <button class="btn btn-danger pull-right">Read More</button>
+      </div>
+    </div>
+  </div>
+
+</div> <!-- extra container for styles -->
+
+
+</div>
 
 
 
