--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,6 +29,38 @@ $gray: rgba(87, 94, 92, 1); /* #575e5c  */
 $cream: rgba(253, 242, 211, 1); /* #fdf2d3  */
 $white: rgba(255, 255, 245, 1); /* #fffff5 */
 
+/*** MOBILE STYLES ***/
+	.searchbox {
+	min-height: 200px;
+	height: auto;
+	width: 60%;
+	background-color: $white;
+	position: absolute;
+	bottom: 60px;
+	left: 20%;
+	border: 1px solid $navhover;
+	padding: 20px;
+}
+@media (max-width: 699px) {
+
+}
+
+
+/*** DESKTOP STYLES ***/
+@media (min-width: 700px) {
+	.searchbox {
+	min-height: 200px;
+	height: auto;
+	width: 30%;
+	background-color: $white;
+	position: absolute;
+	bottom: 60px;
+	left: 60%;
+	border: 1px solid $navhover;
+	padding: 20px;
+}
+}
+
 body {
 	background-color: $white;
 	font-family: 'Open Sans', sans-serif;
@@ -51,7 +83,7 @@ h1, h2, h3 {
 
 .carousel {
 	width: 100%;
-	height: 400px;
+	height: 700px;
 	background-color: $lblue;
 	margin-bottom: 20px;
 }
@@ -75,6 +107,15 @@ h1, h2, h3 {
 	background-color: $white;
 }
 
+
+
+.searchbox .btn, .searchbox .form-control {
+	width: 100%;
+	margin-left: 5px;
+	height: 50px;
+}
+
+
 /*** BOOTSTRAP OVERRIDES: EVPH THEME ***/
 
 .btn {
@@ -93,6 +134,15 @@ h1, h2, h3 {
 
 .btn-info {
 	background-color: $lblue;
+}
+
+.carousel-control.right, .carousel-control.left {
+	background-image: none;
+}
+
+.form-control {
+	margin-top: 5px;
+	border-radius: 0px;
 }
 
 .panel {
@@ -121,5 +171,9 @@ h1, h2, h3 {
 	height: auto;
 	width: 100%;
 	padding: 20px;
-
 }
+
+.footer .btn {
+	margin: 0px;
+}
+
