--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -44,16 +44,16 @@
       </div>
       <div class="row-fluid">
           <div class="col-md-6">
-            <input type="Text" class="form-control not-simple-form" placeholder="Search...">
+            <input type="Text" class="form-control not-simple-form" placeholder="Date">
           </div>
           <div class="col-md-6">
-            <input type="Text" class="form-control not-simple-form" placeholder="Search...">
+            <input type="Text" class="form-control not-simple-form" placeholder="Location">
           </div>
           <div class="col-md-6">
-            <input type="Text" class="form-control not-simple-form" placeholder="Search...">
+            <input type="Text" class="form-control not-simple-form" placeholder="Venue Type">
           </div>
           <div class="col-md-6">
-            <input type="Text" class="form-control not-simple-form" placeholder="Search...">
+            <input type="Text" class="form-control not-simple-form" placeholder="Guest Range">
           </div>
             <div class="col-md-12"><button class="btn btn-danger">SUBMIT</button></div>
            <center>· 
