Included polymorphic show/edit views for asset class

--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -95,5 +95,7 @@
   <%= @venue.user_id %>
 </p>
 
+<%= image_tag asset.photo.url(:medium) %>
+
 <%= link_to 'Edit', edit_venue_path(@venue) %> |
 <%= link_to 'Back', venues_path %>
