--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,74 +1,51 @@
 <div class="content container">
-<div class="panel panel-info">
-	<div class="panel-heading">
-        	<center><h1>Sign Up</h1></center>
-      </div>
-      <div class="panel-body">
-
-<%= semantic_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-	<%= f.inputs do%>
-
-	
-
-		<div class="row-fluid">
-			<div class="col-md-12">
-				<h3> Login Details </h3>
-			</div>
-			<div class="col-md-4">
-				EMAIL <%= f.input :email, :required => true, :autofocus => true, :label=>false %>
-			</div>
-			<div class="col-md-4">
-		    	PASSWORD <%= f.input :password, :required => true, length: { in: 6..20 }, :label=>false, :hint=>"Must contain letters, numbers and special characters"%>
-		    </div>
-			<div class="col-md-4">
-		    	CONFIRM PASSWORD <%= f.input :password_confirmation, :required => true, length: { in: 6..20 }, :label=>false%>
-			</div>
-			<div class="col-md-12">
-				<hr>
-			</div>
-		</div> <!--row fluid-->
-
-
-
-
-		<div class="row-fluid">
-			<div class="col-md-12">
-				<h3> Personal Details </h3>
-
-				
-				
-			</div>
-		</div>
-
-
-
-<center>
-  <br>
-  <hr>
-    <% end %>
- 
-<div class="row-fluid">
-
-    	<%= f.action :submit, :button_html => { :class => "btn btn-info pull-right"}%>
-
- </div>
-  
- <%= content_tag(:div, flash[:error], :id => "flash_error") if flash[:error] %>
-<%= content_tag(:div, flash[:notice], :id => "flash_notice") if flash[:notice] %>
-<%= content_tag(:div, flash[:alert], :id => "flash_alert") if flash[:alert] %>
-
-<% end %>
-
-<br><br>
-	
-
-
-</div> <!--panel-body-->
-
-</div> <!--container -->
-<center>
-	Already have an account? 
-	<%= render "devise/shared/links" %>
+	<div class="panel panel-info">
+		<div class="panel-heading">
+        	<center>
+						<h1>Sign Up</h1>
+					</center>
+    </div>
+    <div class="panel-body">
+			<%= semantic_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+				<%= f.inputs do%>
+					<div class="row-fluid">
+						<div class="col-md-12">
+							<h3> Login Details </h3>
+						</div>
+						<div class="col-md-4">
+							EMAIL <%= f.input :email, :required => true, :autofocus => true, :label=>false %>
+						</div>
+						<div class="col-md-4">
+					    	PASSWORD <%= f.input :password, :required => true, length: { in: 6..20 }, :label=>false, :hint=>"Must contain letters, numbers and special characters"%>
+					  </div>
+						<div class="col-md-4">
+					    	CONFIRM PASSWORD <%= f.input :password_confirmation, :required => true, length: { in: 6..20 }, :label=>false%>
+						</div>
+						<div class="col-md-12">
+							<hr>
+						</div>
+					</div> <!--row fluid-->
+					<div class="row-fluid">
+						<div class="col-md-12">
+							<h3> Personal Details </h3>
+						</div>
+					</div>
+					<center>
+					<br>
+					<hr>
+    		<% end %>
+				<div class="row-fluid">
+    			<%= f.action :submit, :button_html => { :class => "btn btn-info pull-right"}%>
+				</div>
+				<%= content_tag(:div, flash[:error], :id => "flash_error") if flash[:error] %>
+				<%= content_tag(:div, flash[:notice], :id => "flash_notice") if flash[:notice] %>
+				<%= content_tag(:div, flash[:alert], :id => "flash_alert") if flash[:alert] %>
+			<% end %>
+			<br><br>
+		</div> <!--panel-body-->
+	</div> <!--container -->
+	<center>
+		Already have an account?
+		<%= render "devise/shared/links" %>
 	</center>
 </div> <!--content-->
-</div>
