--- a/app/views/layouts/_unsigned.html.erb
+++ b/app/views/layouts/_unsigned.html.erb
@@ -20,7 +20,7 @@
                       <!--main-nav-->
                       <div class="main-nav">
 
-                      <ul id="unsigned" class="nav navbar-nav">              
+                      <ul id="unsigned" class="nav navbar-nav pull-right">              
             						<li class="dropdown">
               						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Log In <span class="caret"></span></a>
               							<ul class="dropdown-menu" role="menu">
@@ -38,15 +38,14 @@
 
                         <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sign Up <span class="caret"></span></a>
-                          <ul class="dropdown-menu" role="menu">
-                          Are you a
-                            <li>
-                               <%= link_to '<i class="fa fa-plus-square nav-icon fa-2x" id="create-new"></i>  <span class="nav-label" id="create-new">Event Planner?</span>'.html_safe, new_user_registration_path, id: "create-new"  %>
+                          <ul class="dropdown-menu pull-right" role="menu">
+                            <li class="col-lg-6" id="event-planner">
+                               <%= link_to 'Event<br> Planner'.html_safe, new_user_registration_path, id: "create-new"  %>
                                
                              </li> 
 
-                              <li>
-                               <%= link_to '<i class="fa fa-sign-in nav-icon fa-2x" id="log-in"></i>  <span class="nav-label" id="log-in">Venue Provider?</span>'.html_safe, new_supplier_registration_path, id: "log-in"  %>    
+                              <li class="col-lg-6" id="venue-provider">
+                               <%= link_to 'Venue<br> Provider'.html_safe, new_supplier_registration_path, id: "log-in"  %>    
                               </li>
 
                           </ul><!--dropdown menu-->
