--- a/app/views/layouts/_unsigned.html.erb
+++ b/app/views/layouts/_unsigned.html.erb
@@ -1,6 +1,6 @@
 <div id="navbar-wrapper">
   <div class="container" id ="nav-container">        
-    <div id="nav" class="navbar navbar-inverse navbar-fixed-top no-padding">
+    <div id="nav" class="navbar navbar-fixed-top no-padding">
         <div class="col-sm-12 padding-3em">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -22,29 +22,29 @@
 
                       <ul id="unsigned" class="nav navbar-nav">              
             						<li class="dropdown">
-              						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Log In <span class="caret"></span></a>
+              						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Log In</span></a>
               							<div class="dropdown-menu" role="menu">
               								  <div class="col-lg-6" id="event-planner">
-    		                         <%= link_to 'Event<br> Planner'.html_safe, new_user_session_path, id: "log-in"  %>       
+    		                         <%= link_to "I'm a Event<br> Planner".html_safe, new_user_session_path, id: "log-in"  %>       
     		                       </div>
 
     		                       	<div class="col-lg-6" id="venue-provider">
-    		                         <%= link_to 'Venue<br> Provider'.html_safe, new_supplier_session_path, id: "log-in"  %>    
+    		                         <%= link_to "I'm a Venue<br> Provider".html_safe, new_supplier_session_path, id: "log-in"  %>    
     		                       	</div>
 
               							</div><!--dropdown menu-->
               						</li>
 
-                        <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sign Up <span class="caret"></span></a>
+                        <li class="dropdown" id="sign-up-li">
+                        <button class="dropdown-toggle btn btn-danger" data-toggle="dropdown" id="sign-up">Sign Up!</button>
                           <div class="dropdown-menu" role="menu">
                             <div class="col-lg-6" id="event-planner">
-                               <%= link_to 'Event<br> Planner'.html_safe, new_user_registration_path, id: "create-new"  %>
+                               <%= link_to "I want to book a venue!".html_safe, new_user_registration_path, id: "create-new"  %>
                                
                              </div> 
 
                             <div class="col-lg-6" id="venue-provider">
-                               <%= link_to 'Venue<br> Provider'.html_safe, new_supplier_registration_path, id: "log-in"  %>    
+                               <%= link_to 'I can provide a venue!'.html_safe, new_supplier_registration_path, id: "log-in"  %>    
                             </div>
 
                           </div><!--dropdown menu-->
