--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -131,6 +131,7 @@ h1, h2, h3 {
 
 .btn {
 	border-radius: 0px;
+	border: 0;
 	width: 100px;
 	margin: 5px;
 }
@@ -566,22 +567,39 @@ This stylesheet forms part of the Formtastic Rails Plugin
 
 
 
-/*
-.navbar-inverse .navbar-nav > li > a{
-    background-color: $white;
-    padding-top: 0.7em;
-    text-decoration: none;
-    width: 100%;
-}
-*/
 .navbar .navbar-nav > li > a:hover{
-  background-color: $navhover;
-  color: $white;
+  color: $salmon;
+  background-color: $white;
 }
 .navbar .navbar-nav > li > a.active{
-  background-color: $salmon;
-  color: $white;
+  color: $salmon;
+  background-color: $white;
 }
+
+.navbar-nav > .active > a {
+  background-color: none;
+  color: $salmon;
+}
+
+.navbar-nav > .open > a{
+  background-color: $white;
+  color: #999;
+}
+
+.navbar-nav > .open > a:hover,
+.navbar-nav > .open > a:focus {
+  background-color: $white;
+  color: $salmon;
+}
+
+
+.navbar-nav .open .dropdown-menu > li > a:hover{
+  background-color: $navhover;
+  color: #aaa;
+
+}
+
+
 
 #navbar-wrapper {
   position: relative;
@@ -617,7 +635,6 @@ This stylesheet forms part of the Formtastic Rails Plugin
 	}
 
 	.navbar-nav > li > .dropdown-menu {
-		margin-top: -1px;
 		width: 400px;
 	}
 
@@ -625,112 +642,40 @@ This stylesheet forms part of the Formtastic Rails Plugin
 		float: right;
 	}
 
-	.navbar-nav > #sign-up-li > .dropdown-menu{
+	.navbar-nav > li > .dropdown-menu{
 		right: 0;
 		left: auto;
+		border-radius: 0;
+		margin: -1px;
 	}
 
+	.navbar-nav > li > #sign-up-dropdown{
+		margin-top: 1.2em;
+	}
 
+	.navbar-nav > li > .dropdown-menu > div > .button-dropdown > a{
+		color: $white
+	}
 
+	.navbar-nav > li > .dropdown-menu > div > .button-dropdown > a:hover{
+		text-decoration: none; 
+	}
 
+	.button-dropdown{
+		height: 50px;
+		padding: 0.4em;
+		
+
+	}
+
+	.navbar-nav > li > .dropdown-menu > div > #event-planner{
+		background-color: $lblue;
+		margin: 0.4em 0 0.5em 0.5em;
+	}
+
+	.navbar-nav > li > .dropdown-menu > div > #venue-provider{
+		background-color: $salmon;
+		margin: 0.4em  0.5em 0.5em 0;
+	}
 }
 
-/* DASHBOARD
---------------------------------------------------------------------------------------------------*/
-.fa-account-type > #venue-provider{
-	background-color: rgba(62, 200, 230, 0.75);
-}
-
-.fa-account-type > #event-planner{
-	background-color: rgba(255, 103, 89, 0.75);
-}
-
-
-.btn-default-gray {
-  background-color: #bbb;
-  border-color: #bbb;
-}
-
-.dashboard-wrapper{
-  /*background-color: rgb(249, 234, 192);*/
-  background-color: rgba(255, 255, 245, 0.5);
-  min-height: 500px;
-  padding: 1.5em;
-}
-
-.account-info {
- /* background-color: rgb(247, 226, 170);*/
- padding: 1em 0 1em 0;
- /*  padding: 0.75em 1em 0.3em 1em;
- min-height: 5.5em;*/
- margin-bottom: 0.5em;
- min-height: 4.3em;
- background-color: transparent!important;
-}
-
-.account-type-wrapper > td > .account-name{
-  font-size: 1.5em;
-  line-height: 1.5em;
-  font-family: 'Cabin', sans-serif;
-  opacity: 1;
-  position: absolute;
-  transition: all 0.2s ease-in-out;
-    -webkit-transition: all 0.2s ease-in-out;
-    -oz-transition: all 0.2s ease-in-out;
-    -moz-transition: all 0.2s ease-in-out;
-}
-
-.account-type-wrapper > td > #venue-provider-label,
-.account-type-wrapper > td > #event-planner-label{
-  font-weight: normal;
-  opacity: 0;
-  font-size: 1em;
-  line-height: 1.5em;
-  cursor: none;
-  transition: all 0.2s ease-in-out;
-    -webkit-transition: all 0.2s ease-in-out;
-    -oz-transition: all 0.2s ease-in-out;
-    -moz-transition: all 0.2s ease-in-out;
-
-
-}
-
-.account-type-wrapper > #venue-provider-label{
-  background-color: rgba(62, 200, 230, 0.75);
-}
-
-.account-type-wrapper > #event-planner-label{
-  background-color: rgba(255, 103, 89, 0.75);
-}
-
-
-
-.account-type-wrapper > td > span > #account-type{
-  font-size: 1em;
-  right: 0;
-  color: $white;
-  font-weight: 700;
-
-}
-
-.fa-gray{
-  font-size: 1.75em;
-  color: rgba(89, 89, 89, 0.5);
-  transition: color 0.35s;
-  -webkit-transition: color 0.35s;
-  -moz-transition: color 0.35s;
-  -o-transition: color 0.35s;
-}
-
-.fa-vp{
-  color: rgba(62, 200, 230, 0.95);
-}
-
-.fa-ep{
-  color: rgba(255, 103, 89, 0.95);
-}
-
-.fa-gray:hover, .fa-orange:hover{
-  /*color: rgba(89, 89, 89, 0.95); */
-  color: rgb(249, 209, 97);
-}
