--- a/app/views/layouts/_unsigned.html.erb
+++ b/app/views/layouts/_unsigned.html.erb
@@ -23,14 +23,16 @@
                       <ul id="unsigned" class="nav navbar-nav">              
             						<li class="dropdown">
               						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Log In</span></a>
-              							<div class="dropdown-menu" role="menu">
+              							<div class="dropdown-menu" role="menu" id="log-in-dropdown">
+                              <div class="col-lg-12"><h4>Welcome back!</h4></div>
               								  <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                   <div class="button-dropdown" id="event-planner">
+                                <div class="button-dropdown" id="event-planner">
     		                         <%= link_to "<h4>Event Planner</h4>".html_safe, new_user_session_path, id: "log-in"  %>   
                                   </div>    
     		                       </div>
 
     		                       	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+
                                   <div class="button-dropdown" id="venue-provider">
     		                         <%= link_to "<h4>Venue Provider</h4>".html_safe, new_supplier_session_path, id: "log-in"  %>    
                                  </div>
@@ -42,6 +44,7 @@
                         <li class="dropdown" id="sign-up-li">
                         <button class="dropdown-toggle btn btn-danger" data-toggle="dropdown" id="sign-up">Sign Up!</button>
                           <div class="dropdown-menu" role="menu" id ="sign-up-dropdown">
+                            <div class="col-lg-12"><h4>Sign up for our services!</h4></div>
                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                               <div class="button-dropdown" id="event-planner">
                                <%= link_to "<h4>Book a venue!</h4>".html_safe, new_user_registration_path, id: "create-new"  %>
