--- a/app/views/layouts/_signed.html.erb
+++ b/app/views/layouts/_signed.html.erb
@@ -1,12 +1,70 @@
+<div id="navbar-wrapper">
+  <div class="container" id ="nav-container">        
+    <div id="nav" class="navbar navbar-fixed-top no-padding">
+        <div class="col-sm-12 padding-3em">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="/">
+                <img src="/assets/landing/logo2-nav.png" class="nav-logo" width= "200px;">
+              </a>
+            </div> <!--nav-header-->
 
-<ul id="signed" class="nav navbar-nav">  
-<li>
- <%= link_to '<i class="fa fa-cog nav-icon fa-2x" id="set"></i>  <span class="nav-label" id="set">Settings</span>'.html_safe, edit_user_registration_path, id: "set"  %>
+            <div class="row">
+            <div class="navbar-collapse collapse">
+              <nav id = "nav-main" role = "navigation">
+                  <div class="no-padding">
+                      <!--main-nav-->
+                      <div class="main-nav">
+
+                      <ul id="signed" class="nav navbar-nav">              
+
+                        <li><a id="dashboard" href="<%= dashboard_path %>">
+                           <i class="fa fa-home fa-2x nav-icon" id="dashboard"></i>
+                           <span class="nav-label" id="dashboard">Dashboard</span>                    
+                        </a></li> 
+
+                        <li><a id="venue-search" href="<%= venues_path %>">
+                            <i class="fa fa-search nav-icon fa-2x" id="venue-search"></i> 
+                            <span class="nav-label" id="venue-search">Search</span>
+                        </a></li>   
+
+                        <% if supplier_signed_in? %>
+                       
+                        <li>
+                          <%= link_to '<i class="fa fa-cog nav-icon fa-2x" id="set"></i>  <span class="nav-label" id="set">Settings</span>'.html_safe, edit_supplier_registration_path, id: "set"  %>
+                         </li> 
+
+                        <li>
+                           <%= link_to '<i class="fa fa-power-off fa-2x nav-icon" id="out"></i> <span class="nav-label" id="out"> Log Out</span>'.html_safe, destroy_supplier_session_path, :method => :delete, id: "out"  %>
+                                      
+                        </li> 
+
+                        <% else %> 
+                        <li>
+                          <%= link_to '<i class="fa fa-cog nav-icon fa-2x" id="set"></i>  <span class="nav-label" id="set">Settings</span>'.html_safe, edit_user_registration_path, id: "set"  %>
+                         </li> 
+
+                        <li>
+                           <%= link_to '<i class="fa fa-power-off fa-2x nav-icon" id="out"></i> <span class="nav-label" id="out"> Log Out</span>'.html_safe, destroy_user_session_path, :method => :delete, id: "out"  %>
+                                      
+                        </li> 
+                        <% end %>
+                     </ul> <!--user name-->  
+
  
-</li> 
 
-<li>
- <%= link_to '<i class="fa fa-power-off fa-2x nav-icon" id="out"></i> <span class="nav-label" id="out"> Log Out</span>'.html_safe, destroy_user_session_path, :method => :delete, id: "out"  %>
-            
-</li> 
-</ul> <!--user name-->  
+                      </ul> <!--unsigned-->  
+                    </div>    <!--main-nav--> 
+                    </div> <!--no padding-->
+              </nav>  
+            </div> 
+          </div><!--row-->
+        </div>
+     </div><!--nav id-->
+    </div><!--nav container-->
+</div><!--navbar wrapper-->
+
